<?xml version="1.0"?>
<package format="2">
  <name>ardent_controller_manager</name>
  <version>0.0.0</version>
  <description>The ardent_controller_manager package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nathan@todo.todo">nathan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>ardent_model</build_depend>
  <build_depend>ardent_controller_interface</build_depend>
  <build_depend>ardent_component_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rostest</build_depend>

  <exec_depend>ardent_model</exec_depend>
  <exec_depend>ardent_controller_interface</exec_depend>
  <exec_depend>ardent_component_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosparam</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

    <ardent_controller_interface plugin="${prefix}/test/controller_plugin.xml"/>
  </export>
</package>
